# Qem

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  MIGRATION-0.7.md  PERF-BASELINE-0.7.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
.kiro/specs/encoding-aware-engine/: .config.kiro  design.md  requirements.md  tasks.md
benches/: document_perf.rs
demos/qem-egui-demo/: Cargo.toml
demos/qem-egui-demo/src/: main.rs
examples/: editor_session.rs  frontend_session.rs  perf_probe.rs  typed_editing.rs  viewport.rs
proptest-regressions/: document.txt
proptest-regressions/document/: tests.txt
scripts/: collect_perf_matrix.ps1  create_sparse_stress_fixture.ps1  smoke_examples.ps1  summarize_perf_matrix.ps1
src/: document.rs  editor.rs  index.rs  lib.rs  piece_tree.rs  source_identity.rs  storage.rs
src/document/: alignment.rs  commands.rs  editing.rs  encoding_engine.rs  lifecycle.rs  persistence.rs  positions.rs  reads.rs  regex_search.rs  regex_tests.rs  search.rs  state.rs  tests.rs  types.rs
src/editor/: core.rs  session.rs  tab.rs  tests.rs  types.rs
tests/: encoding_engine.rs  migration_callsites.rs
tests/encoding_engine/: mod.rs  preserve_save_piece_table.rs  prop_alignment.rs  prop_backing.rs  prop_columns.rs  prop_dispatch.rs  prop_edit_save_roundtrip.rs  prop_endianness.rs  prop_insert_roundtrip.rs  prop_insert_unrepresentable.rs  prop_newline.rs  prop_open_save_roundtrip.rs  prop_reverse_dfa_overflow.rs  prop_reverse_regex.proptest-regressions  prop_reverse_regex.rs  prop_reverse_regex_repro.rs  prop_step.proptest-regressions  prop_step.rs
(+12 files in other folders)
